--- a/ApiServidorJava/src/main/webapp/WEB-INF/config.yml
+++ b/ApiServidorJava/src/main/webapp/WEB-INF/config.yml
@@ -1,13 +1,12 @@
 ## YAML Template.
 ---
-#driverDB: com.mysql.jdbc.Driver
-#urlDB: jdbc:mysql://db4free.net:3307/clasesdaw?useSSL=false
-#userDB: oscarnovillo
-#passDB: c557ef
-#passDB: clasesdaw
-
-
 driverDB: com.mysql.jdbc.Driver
-urlDB: jdbc:mysql://localhost/clasesdaw?useSSL=false
-userDB: root
-passDB: nohay2sin3
+urlDB: jdbc:mysql://db4free.net:3307/clasesdaw?useSSL=false
+userDB: oscarnovillo
+passDB: c557ef
+#db4free.net:3307
+
+#driverDB: com.mysql.jdbc.Driver
+#urlDB: jdbc:mysql://localhost/clasesdaw?useSSL=false
+#userDB: root
+#passDB: nohay2sin3
