--- a/ClienteBancario/src/main/webapp/WEB-INF/config.yml
+++ b/ClienteBancario/src/main/webapp/WEB-INF/config.yml
@@ -7,7 +7,7 @@
 ##passDB: clasesdaw
 
 
-#driverDB: com.mysql.jdbc.Driver
-#urlDB: jdbc:mysql://localhost/banco?useSSL=false
-#userDB: root
-#passDB: nohay2sin3
+driverDB: com.mysql.jdbc.Driver
+urlDB: jdbc:mysql://localhost/banco?useSSL=false
+userDB: root
+passDB: nohay2sin3
